test/parsetest/invalid/localvardecl-is-no-statement.java

class foo {
  public void a() {
    while (i) int i = 1;
  }
}
